# ms-companies

./: .gcloudignore  .gitignore  Makefile  README.md  boot.py  companies_logic.py  company_clients_logic.py  database.py  deprecate.test_orm.py  dev_env.sh  entrypoint.py  main.py  pyproject.toml
application/: __init__.py
application/endpoints/: blueprint_company.py
layers/controller/: controller_company.py
layers/domain/: model.py
layers/presenter/: serializer.py
layers/repository/: repository_company.py
layers/services/: services_company.py
layers/uow/: UoWCompany.py
ports/: AbstractRepository.py  AbstractUnitOfWork.py
src/: conf.py  conftest.py  orm.py
src/utils/: http_responses.py
